# pico-getting-started

./: LICENSE  Readme.md
pico-project-generator/: pico_configs.tsv  run.bat
pico-projects/blink/: CMakeLists.txt  blink.c
